Bug 1280775 - null check in removePermission to prevent crash: permission manager change. r=mystor a=ritu

MozReview-Commit-ID: 1E67oEULEcs

--HG--
extra : source : acc54d3976535aab369cf48bc355bc6477556312